export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_20",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_18",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "array",
        "title": "array_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "array",
        "title": "array_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [
        "secret1",
        "secret2",
        "secret3"
      ],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "testAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 2`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_4",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "sha256_ca4c84007bbe1e2253363df3d2da8605fc21e36c4c280cbb335b7daf5ce0dc73",
          "fn": "(lambda x: (x['first'] + x['second']))"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      },
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]\`
`;

snapshot[`typegraphs creation 3`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_9",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1Y727bNhD3Zz0FwX6ROlW15CQbvKnY0HZFgRYL2mwYEAQCLdG2UEnUKGqxZ/hN9jZ7sR1J/bedtF0SrIUPsEXyyOPxePzxeCFL84SunHw9ujcaA52dnKgv0PA7mYwnI3d8cuaOvbE3ke2u67nwHT0AlYUgHKHRf6Xh4r4QeoSes3zN48VSoLdUELHOKfrln79tlMQhzQoaoTKLKEdiSdFb9lecJASdlzPgoje6B/qN8iJmGfKcsWM8Qu/PX/z+pOI9eR3RTMTzmPIpenv+5gn0MYw5ZymSMy04yZdBRlcCxWnOuEDCbhn7+jmq6OSEk7SoB/1UiqUNC+GFjd4RQW8Y2DTWY18dnClnsMh13e9c1fZ25CUsMaWFA2tldf8XUH6nGYZRsJReSMv6SDiF4GUoTAMBbdS/JMwyiqfAJpyTtSmcOBN0Qblp2SiNM39io4yk1McX1wxbdjtOQF2OY7mATSAJDM05W61N/L6aFVtV/63+aDkN1zYswwg1DtymJAmAEWcLNaMuml1lSDBPGBGKrUqm1N11xrCIMhExzBGwuQ9e0BuVBTQrUzVKFsxLZQ1bL+5q0LUyTDuktpRsoJxIM/iXro28KxuFLJvHC3+DP9A1dMZ/kqSkeLtH51aeVrwvzTkFec5pX5dAW6k2hjTYppqhlWP1JstoIWjU22gaw9ni5mXHoJ1FWVeW1e7trqjgGoYHnM5BZu1mA9OmJE60bWXJ3OcMz9vt1/5g/Ng4uXaCgoacisK/xLrkyu3RRa8tTvCVFhvCYfTliTQbXUiSsOsAeilIIEnh/wx/HWV1hyUlgDcw0dWQk1KxZJFU4dXLC7zDZoBi4GyX+HGXR1c5K+heqSlZBWRBA1Ddd72xaq+MQwBRoLMEFmeZktA7PTOxAIPLFmxVQsA7qC8Bp13kdZxFoIsUeTa2h81JnMYC5vqu5fxRUr6uGJ3mhIUkCegqpEXhn7bt4M8CMCeIG1z1cVlQju1afcuI6BxJXYPqUAdyKwtzMdVgZ01VVwVWfhenTEsx8nIG7RrvnFxBPXAUa+Foc7brlfP4UpQzL7Owbde6Nk5l9xjCmTGWUJJ1/VmPiMAZTQv5zxCcJ4pbtuUoR9egbIJa1VDLGB3p86lB5eYSu/tI8Jb4zz2FmG8Q/00mnneM/x6APjIUs+80TsrXAORZM0LV6ljp8wKs7nXVAcAd7x6CoIa3PXB3M0Jq/f2+6odBkkSRL/YAZD/M6tJmp0USnse86AZXA/hs+sH1w7Lo5o7bXos1ROi94/TCHblHQULSWURM/UGrKVpdVvpdoW9kpVKiGzLtgDh8O+xqu9aHLpROlLVriX2r3n7csqprZ4OUVBtpQWir7iHVhh5XjfijFvPlXEpFyONcFE/FklPqiGJ0D3QL/gPy77z/vcmJe8T/B6CnTz8lAfAyIYXovPzVix9EHHzyVwP0s18+afichBRdSG97neWlUEg3myJ4bM0o/x4qpK1sDUNCKYC9xAL5BELKTyUqbBCx0Qxtpx1h8vBtoGVTh8lT9A5OLY9+0C8rG5byIWPX2TP5+rGmanLSnbyjyVZx4U1T8qyZTeo0+pqoiGWMfq/pv1vjv7Ozb3fyf+OT0+P5fwD6P+f/7Coquyn4vD00JCqf1aRTIBnndjNcG0wgYoDTjWe9ZJLKW3kQQRjGrCdBM2yZPfBPJsCWz+++xDjqiZKxCQSEOlyBTI2Jz2XN2tYpvV/lAx4kyU63SpKpCcZbWXpwI0uLPhgRf3Iq4HB4rOAcklItu245HAlDWq8T3BWQpJvZvVe/6+F+XFXL7IRskBTsCJHmt5E0XSNJNilpENLF0RTJ7VK7tLUG0nthoJJZMTBU1jKvpdWay0wVtow94bK6kbQ+2v0CtS750zuiOoColEVlAvVhyHWTStrgw2mPOY8jHelId0D/Aqp5/0gAHgAA"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 4`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_20",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_18",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "array",
        "title": "array_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "array",
        "title": "array_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 5`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_4",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "sha256_1ba371f8249eab0c77239207fa3c16506224b5c287f58aa5ff322450a6aee50d",
          "fn": "lambda x: x['first'] + x['second']"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      },
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]\`
`;

snapshot[`typegraphs creation 6`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_9",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+0Y7W7bRsy//RSE/kTabNmWnf5Q12JAsx8FOiRoM2BAYBhn6+QIlU7C6bTYMPQme5u92Mg7SZY/1qxoYmypiQSSeDySR/JImos0yWK+clXeeTYYIryaTPQTYf/peZfjzmg4eTUaekNvTPjRyBuNOsPOCaDIFZMAnW+F/cP9T2AwgHdptpbR8l7Br1wxtc44XP/1Zw/iaMFFzgMoRMAlqHsOv8QsV9ECPpgl8Nyh20UWn26ufu9XyP77gAsVhRGXfr2hj4RdIry9vrr2ocCtUZKlUkHCsm71uoGbFGWue6DwD9VYSpbdQwmhTBOwfm5QAxSQDnK5GCRpgJFrvd6yuMKljwXKT/gXd0pDk2uM4dFdpCJXkKcJvyUjvAHl5koWC2VvugCp4D5imJRsbSs3EoovubSdHkpNIuHDGEp6FyxBQuv2IbWgdHq4Uz2ktDPNVJQKFuPmTKartW19qkRZDtK1NzcLyKFRbGGu6jHd2Aw/IrH0DRrfbC2ZzcI4ZYrQ+sWuVB31ICliFSG/69AHr1KUiRkXRULk9JzZdxae2uqBhUewpjVNdfSGtjbFBgjDJaNz+nCHUrypNgruA9RfhBGquIHPfI2H/IPFBZ2QuJZtdRvGtc57bN1LZOxeTptdxhJ+yyagmW95OBWt4LniQduPPMLAlvZdy3CtIzlTx9k6rsVi9oD7ZpKj9eqAqS2YsCjWJqQXe8+z77ZOrJzbBKdtKWTdr9zcJ3yOtreXDrx5q21o4oAiFgNA8Id2tNvIq6bIijkSmNvk4gc+aRnXly5fZWnObeMSEuhrhm5YiIWtkdCOtF6FUu48TWPOhDECwaZ6En1AZ7O1ougBDJlmjYchJ99sQDF0viUoovBqshyNta7pSvPiuGRWo7iNijsmNl536b9zhqeHOg3M6oT4DJ3AI/V/dOl5+/V/PPbO9f8UcMr6/x+p81s11uo+FV/FJdNbqn5hP3PXd6lfkx/L3v+Qm78iuWsVKpqdIxzP8SzQ9a6d31t10gojmSurVSmx2uccRQXWYfk0m2vCClHZhKz3gSXzgNlWrJ+w8mF1d6ElXEzhR/owrC+mlvOFjA91d7I+UpyeVvlNU7w2mlkPzP5Su02j4IcKZ73AMpUvZJSpfKDuJefP9CvwkfyPmf/g9583npzz/yngpPkfm2oZsgWHW4q29yIrlM6Mcx+ww59zSVmObT/KbpdSGSZrSgDUhIOOU0oFG2A9mEPpt5jRNdyUvr7UKGuFbedHvLky+Mn09j08ymeRPoi3dJMdXwtnbeEtTUq9KrkqpGikkU6dlwR5RK3+s45/Hp3/4HU/mP8Mvcn5/p8AvsP+rxqnMD1EaX7ob+c/o53pir74u1MOM0KhoUl7PDPf4ddQ4aSFYR80GbdpcQAm92c4UdCWolsK7OL0VKMaF93gp7U3T/gNOe1MiWjPv2DNCmzapB7FyV2OWsrx0cTTjyTqZV0acMSypakxx5taPYzbtoY5jprmvWYisTOPGHnVNKLcadtq/lUnqGd0W4baLNqWh1xpTXNGJ5NlycfaoaVzVJLmmpl3Cz/WNFAzuoUszs30T+tAhazSwgR63fPi+Q7eGofpbcgTL0kRE2K/p3uJfesZznCGM5zh2+BvL2QQxQAeAAA="
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]'
`;
